Added no reorder to test cases
Added no reorder to test cases

https://github.com/A24Group/Triage/issues/10322

--- a/tests/index.html
+++ b/tests/index.html
@@ -21,6 +21,12 @@
     {{content-for "body"}}
     {{content-for "test-body"}}
 
+    <script>
+        //By default test that fail will be run first the next time around, this stops that from happening since
+        //some test may rely on other test to finish
+        QUnit.config.reorder = false;
+    </script>
+
     <script src="/testem.js" integrity=""></script>
     <script src="{{rootURL}}assets/vendor.js"></script>
     <script src="{{rootURL}}assets/test-support.js"></script>
